syntax = "proto3";

package v1;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "environment.proto";


service Service {

  rpc AllEnvironment (google.protobuf.Empty) returns (AllEnvironmentReply) {
    option (google.api.http) = {
      get: "/v1/environments"
    };
  }


}


